Added Canvas rendering and 60fps cap

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
 <input type="file" id="rom-select">
 
+<canvas id="canvas" width="640" height="576"></canvas>
+
 <script src="main.js" type="module" defer></script>
 
 </body>
