--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <canvas id="canvas" width="640" height="576"></canvas>
 
+<canvas id="background-map-canvas" width="256" height="256"></canvas>
 <script src="main.js" type="module" defer></script>
 
 </body>
